# react-rules-of-hooks-ppx

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release-postinstall.js  release.js  release.yml
demo/: bsconfig.json  package.json  watcher.js
demo/src/: BlinkingGreeting.bs.js  BlinkingGreeting.re  Index.bs.js  Index.re  Test.re  Test2.re  Test3.re  Test4.re
esy.lock/: index.json
scripts/: release-make-skeleton.js
src/: Ast-410.xre  Ppx.re  dune
test/: ConditionalHooks.expected  ConditionalHooks.re  CustomHooks.expected  CustomHooks.re  ExhaustiveDepsUseEffect.expected  ExhaustiveDepsUseEffect.re  Framework.re  HooksAtTheTopLevel.expected  HooksAtTheTopLevel.re  HooksAtTheTopLevel2.expected  HooksAtTheTopLevel2.re  HooksInsideHooks.expected  HooksInsideHooks.re  InvalidExhaustiveDeps.re  InvalidRuleExhaustiveDeps.re  InvalidRulesOfHooks.re  Run.re  Test.re  ValidRuleExhaustiveDeps.js  ValidRulesOfHooks.js  dune
