; -------- Test: `ExhaustiveDeps` --------

(rule
 (targets InvalidRuleExhaustiveDeps.actual)
 (deps
  (:pp ../bin/Standalone.exe)
  (:input InvalidRuleExhaustiveDeps.ml))
 (action
  ; expect the process to fail, capturing stderr
  (with-stdout-to
   %{targets}
   ; expect the process to fail, capturing stderr
   (with-stderr-to
    %{targets}
    (bash "! ./%{pp} %{input}")))))

(rule
 (targets InvalidRuleExhaustiveDeps.ml)
 (deps InvalidRuleExhaustiveDeps.re)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=re --print=ml %{deps})
  )
 )
)

; Compare the post-processed output to the .expected file
(rule
 (alias runtest)
 (action
  (progn
   (diff InvalidRuleExhaustiveDeps.expected InvalidRuleExhaustiveDeps.actual)
  )
 )
)
